style.css
/*.jumbotron {
	background-color:red;
}*/

@import url(http://fonts.googleapis.com/css?family=Roboto:500,100,300,700,300italic,400);
p{
	font-size:21px;
	font-weight:100;
	text-align:center;
}

.panel {
	border:0px;
	box-shadow: 0 0px 0px rgba(0, 0, 0, 0)
}

form { border: 0px; }
#main {
	margin-top: 2.5em;
}

.container {
	margin-top:4.7em;
}

ul.nav-justified.top-nav {
	height:4em;
}

.top-nav li {
	display:inline;
	font-size:3em;
/*	margin-left:6%;
	margin-right:6%;*/
	display: table-cell;
	float: none;
	width: 1%;
}

.top-nav li a {
	color:#fff;
}

.top-nav {
	background:rgba(0,0,0,0.6);
	top:0;
}

/*.navbar-nav>li {
  float: none;
}*/

body,h1,h2,.navbar-brand {
	font-family:'Roboto', arial, sans-serif;
}

.ng-scope {
	background-color: #fff;
}

h1 {
	font-weight: 300;
}

button {
	font-weight: 300;
	margin-top:10px;
}

.options {
	font-weight: 300;
}

ol {
	list-style-type: upper-latin;
}

#currentQuestionList {
	text-align:left;
	font-size:21px;
	font-weight:300;
	list-style-type: none;
	padding:0;
}

#currentQuestions {
	/*font-weight:700;*/
	padding:0;
}

#currentOptions {
	font-weight:300;
	padding:0;
	margin-left:25px;
}

#trashQuestion {
	background:rgba(0,0,0,0);
	border:none;
	outline:none;
	font-size:35px;
	color:#FF3366;
	margin-top:-5px;
	padding-top:0px;
	margin-left:0px;
	padding-left:0px;
}

#optionsList {
	text-align:left;
	padding:0;
	margin:0;
	margin-top:10px;
	margin-bottom:5px;
	list-style-type: none;
}

#quiz {
	font-size:21px;
	background:yellow;
}

#quizQuestion {
	text-align:left;
	padding:0;
	margin:0;
	font-weight:300;
	/*background:lime;*/
}

#optionsList label {
	font-weight:100;
	padding:0;
}

.nav-pills>li>a {
	color: #DFBFFF;
	border: 2px solid #DFBFFF;
 	border-radius: 8px 8px 8px 8px;
 	line-height: 17px;
 	padding-left:30px;
 	padding-right:30px;
}

.nav-pills>li.active>a,
.nav-pills>li.active>a:hover,
.nav-pills>li.active>a:focus
{
	background-color: #DFBFFF;
	margin-right:5px;
	margin-left:5px;
}

.nav-pills {
	font-size:16px;
	display:inline-block;
	font-weight: 300;
}

/*Reference for styling radio buttons:
https://stackoverflow.com/questions/4516217/make-radio-button-bigger
(Cas Bloem's answer)*/
/*input[type=radio] {
    display:none;
}

input[type="radio"] + div {
   height: 25px;
   width: 25px;
   display: inline-block;
   background: #FFF;
   border: 1px solid #d2d2d2;
   border-radius: 100%;
   margin:0px;
}

input[type="radio"]:checked + div {
    background:#DFBFFF;
    border: 1px solid #DFBFFF;
}
*/
.input-group-addon {
	background:#fff;
	border:0px;
}
.input-group {
	width:100%;
}

.form-control.option-input {
	background:rgba(0,0,0,0.1);
	border:0px;
	outline:0px;
}

.form-control.question-input {
	background:rgba(0,0,0,0.1);
	border:0px;
	outline:0px;
	/*margin-right:8px;*/
	width:100%;
}

.form-control{
	border-radius: 8px;
}

.input-group-addon:not(:first-child):not(:last-child),
.input-group-btn:not(:first-child):not(:last-child),
.input-group .form-control:not(:first-child):not(:last-child) {
  border-radius: 8px;
}

.row.questions {
	padding:0;
}

.col-lg-6 {
	padding:0;
	margin-left:20px;
	margin-right:20px;
}

.input-group-addon {
	padding:0;
	padding-right:5px;
}

.btn.submit-question {
	background:#DFBFFF;
	color:#fff;
	border-radius: 8px;
	font-size:16px;
	padding: 10px 16px;
}


.btn.check-answer {
	background:#45EBC2;
	color:#fff;
	border-radius: 8px;
	font-size:18px;
	padding: 10px 16px;
	display:block;
	margin-left: auto;
    margin-right: auto;
}

#nextButton {
	background:rgba(0,0,0,0);
	border:none;
	outline:none;
	font-size:55px;
	color:#ccc;
	padding-top:0px;
	margin-left:0px;
	padding-left:0px;
	float:right;
}

#backButton {
	background:rgba(0,0,0,0);
	border:none;
	outline:none;
	font-size:55px;
	color:#ccc;
	padding-top:0px;
	margin-left:0px;
	padding-left:0px;
	float:left;
}

.col-xs-3.quiz1{
	/*background:lime;*/
	margin:0;
	padding:0;
	padding-left:10px;
}

.col-xs-6.quiz2{
	/*background:blue;*/
	margin:0;
	padding:0;
	margin-top:15px;
}

.col-xs-3.quiz3{
	margin:0;
	padding:0;
	padding-right:5px;
	/*background:red;*/
	float:right;
}

@media screen and (max-width: 768px) {


@media screen and (max-width: 450px) {

}

.container.questions {
	margin-top:10px;
}
.col-xs-10.questions {
	/*background:pink;*/
	padding:0;
}

.col-xs-2.questions {
	/*background:lime;*/
	padding:0;
	text-align:right;
}

.container {
	/*padding:0;*/
}

